colors and background logo

--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@ html, body {
 		}
 		li {
 			margin: 20px;
+			color: rgb(29,99,174);
+		}
+		li.selected {
 			color: rgb(4,55,105);
 		}
+		
 		</style>
 	</head>
 	<body>
@@ -62,7 +66,7 @@ html, body {
 		<div id="content">
 				<div class="menu">
 					<ul>
-						<li>HOME
+						<li class="selected">HOME
 						</li>
 						<li>SHADOW YOGA
 						</li>
