fixed size pics

--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@ html, body {
 			font-family: arial;
 			margin: 0;
 			height: 100%;
-			/*
-			background-image: url("./YWJ_LOGO.jpg");
-			background-repeat: no-repeat;
-			background-position: 50% 0%;
-			*/
 		}
 		#background {
 			position:fixed; 
@@ -42,7 +37,6 @@ html, body {
 			margin-left: 3%;
 		}
 		div.main img {
-			height: 40%;
 			margin: 3%;
 		}
 		ul {
@@ -81,7 +75,7 @@ html, body {
 					</ul>
 				</div>
 				<div class="main">
-				<p><img alt="vahni" src="./DSCF2602.JPG"> <img src="./DSCF2628gd.JPG" alt="sarpa">
+				<p><img alt="vahni" src="./DSCF2602_scaled.JPG"> <img src="./DSCF2628gd_scaled.JPG" alt="sarpa">
 				</p>
 				<p>Welcome
 				</p>
