--- a/index.html
+++ b/index.html
@@ -2,58 +2,7 @@
 <html>
 	<head>
 		<title></title>
-		<style type="text/css">
-html, body {
-			font-family: arial;
-			margin: 0;
-			height: 100%;
-		}
-		#background {
-			position:fixed; 
-			top:0; 
-			left:0; 
-			width:100%; 
-			height:100%;
-		}
-		#content {
-			position:relative; 
-			z-index:1;
-			height: 100%;
-		}
-		div.menu {
-			width: 25%;
-			float: left;
-		}
-		div.main {
-			float: right;
-			width: 75%;
-			height: 100%;
-			font-size: 1.3em;
-			color: white;
-			background-color: rgb(0,84,166);
-			opacity: 0.9;
-		}
-		div.main p {
-			margin-left: 3%;
-		}
-		div.main img {
-			margin: 3%;
-		}
-		ul {
-			list-style-type: none;
-			font-size: 1.6em;
-		}
-		li {
-			margin: 20px;
-		}
-		a.selected, a:hover{
-			color: rgb(4,55,105);
-		}
-		a {
-			text-decoration: none;			
-			color: rgb(29,99,174);
-		}
-		</style>
+		<LINK rel="stylesheet" href="ywj.css" type="text/css">		
 	</head>
 	<body>
 		<div id="background">
