moved images into separate folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div id="background">
-			<img src="./YWJ_LOGO.jpg">
+			<img src="./images/YWJ_LOGO.jpg">
 		</div>
 		<div id="content">
 				<div class="menu">
@@ -26,7 +26,7 @@
 					</ul>
 				</div>
 				<div class="main">
-				<p><img alt="vahni" src="./DSCF2602_scaled.JPG"> <img src="./DSCF2628gd_scaled.JPG" alt="sarpa">
+				<p><img alt="vahni" src="./images/DSCF2602_scaled.JPG"> <img src="./images/DSCF2628gd_scaled.JPG" alt="sarpa">
 				</p>
 				<p>Welcome
 				</p>
