shadow yoga page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 	<head>
-		<title></title>
+		<title>Shadow Yoga with Jaymin</title>
 		<LINK rel="stylesheet" href="ywj.css" type="text/css">		
 	</head>
 	<body>
