rest of the text for classes page

--- a/classes.html
+++ b/classes.html
@@ -29,6 +29,7 @@
 				<p><img alt="sarpa" src="./images/DSCF2612gd.JPG"> <img src="./images/DSCF2615.JPG" alt="ardhabujang">
 				</p>
 				<p><h2>CLASSES</h2></p>
+				<p>NB	private tuition and corporate classes available, pregnancy classes taught upon request</p>  
 					<p><h3>AUCKLAND</h3></p>
 					<p><h3>The Inner Space, 2 Selbourne Street, Greylynn</h3></p>
 					<p>- Thursday 4 November 7pm - Shadow Yoga Demonstration<br>
@@ -39,7 +40,14 @@
 					<p><h3>Yoga Circle, 4 John Street, Whangarei</h3></p>
 					<p>- Tuesday 2 November - Shadow Yoga Demonstration<br>
 						- Tuesday 9 November - Tuesday 14 December<br>
-						&nbsp;&nbsp;6 week course</p>
+						&nbsp;&nbsp;6 week course</p>					
+					<p><h2>WORKSHOPS</h2></p>
+					<p><h3>RAGLAN</h3></p>
+					<p>Sat 4 December and Sun 5 December<br>
+						$50 for the weekend, $30 for Saturday only</p>
+					<p><h3>PRANA NEW YEARS FESTIVAL</h3></p>
+					<p>- Oputere Beach, Coromandel</p>
+					<p>Shadow Yoga demonstration and taught class</p>
 				</div>
 			</div>
 		</div>
