fixed filename case

--- a/shadow.html
+++ b/shadow.html
@@ -26,7 +26,7 @@
 					</ul>
 				</div>
 				<div class="main">
-				<p><img alt="karkottika" src="./images/DSCF2613gd.JPG"> <img src="./images/DSCF2669.JPG" alt="sarpa">
+				<p><img alt="karkottika" src="./images/DSCF2613gd.JPG"> <img src="./images/DSCF2669.jpg" alt="sarpa">
 				</p>
 				<p>Shadow Yoga has grown from its founder Zhander Remete's knowledge and practical understanding of the ancient Hatha Yoga texts, Hatha Yoga anatomy and physiology, the Indian energetic system (marmasthana) and the Chinese energetic system.
 				</p>
