minor text changes

--- a/classes.html
+++ b/classes.html
@@ -28,7 +28,7 @@
 				<div class="main">
 				<p><img alt="sarpa" src="./images/DSCF2612gd.JPG"> <img src="./images/DSCF2615.JPG" alt="ardhabujang">
 				</p>
-				<p><h2>CLASSES</h2></p>
+				<p><h2>SHADOW YOGA CLASSES</h2></p>
 				<p>NB	private tuition and corporate classes available, pregnancy classes taught upon request</p>  
 					<p><h3>AUCKLAND</h3></p>
 					<p><h3>The Inner Space, 2 Selbourne Street, Greylynn</h3></p>
