--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				</p>
 				<p>Welcome
 				</p>
-				<p>Jaymin teaches Hatha Yoga, her teaching being grounded in the Shadow Yoga system.
+				<p>Jaymin Gansell teaches Hatha Yoga, her teaching being grounded in the Shadow Yoga system.
 				</p>
 				<p>Classes and workshops are currently run in Auckland City and surrounding areas with workshops in Northland and the Waikato.
 				</p>
