--- a/about.html
+++ b/about.html
@@ -2,7 +2,20 @@
 <html>
 	<head>
 		<title>Shadow Yoga with Jaymin - About Jaymin</title>
-		<LINK rel="stylesheet" href="ywj.css" type="text/css">		
+		<LINK rel="stylesheet" href="ywj.css" type="text/css">
+			<script type="text/javascript">
+
+			  var _gaq = _gaq || [];
+			  _gaq.push(['_setAccount', 'UA-12135640-3']);
+			  _gaq.push(['_trackPageview']);
+
+			  (function() {
+			    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			  })();
+
+			</script>		
 	</head>
 	<body>
 		<div id="background">
