--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 				<div class="main">
 				<p><img alt="vahni" src="./images/DSCF2602_scaled.JPG"> <img src="./images/DSCF2628gd_scaled.JPG" alt="sarpa">
 				</p>
-				<p>Welcome
+				<p>Welcome.
 				</p>
 				<p>Jaymin Gansell teaches Hatha Yoga, her teaching being grounded in the Shadow Yoga system.
 				</p>
-				<p>Classes and workshops are currently run in Auckland City and surrounding areas with workshops in Northland and the Waikato.
+				<p>Shadow Yoga classes and workshops are currently run in Auckland City and surrounding areas with workshops in Northland and the Waikato.
 				</p>
-				<p>Workshops are also offered throughout Aotearoa where expressions of interest are shown, please get in touch.
+				<p>Shadow Yoga workshops are also offered throughout Aotearoa where expressions of interest are shown, please get in touch.
 				</p>
 				</div>
 			</div>
