--- a/classes.html
+++ b/classes.html
@@ -49,17 +49,23 @@
 						- Thursday 11 November til Thursday 16 December<br>
 						&nbsp;&nbsp;6 week course (6.45 - 8pm)<br>
 						- Saturday morning 9 - 10.30am drop in class</p>
+					<p><h3>Ngunguru</h3></p>
+					<p><h3>Ngunguru Memorial Hall</h3></p>
+					<p>- Mondays - 5.30-6.45pm<br>
+						- Wednesdays - 10-11.15am</p>
 					<p><h3>WHANGAREI</h3></p>
 					<p><h3>Yoga Circle, 4 John Street, Whangarei</h3></p>
 					<p>- Tuesday 2 November - Shadow Yoga Demonstration<br>
 						- Tuesday 9 November - Tuesday 14 December<br>
 						&nbsp;&nbsp;6 week course</p>					
-					<p><h2>WORKSHOPS</h2></p>
+					<p><h2>SHADOW YOGA WORKSHOPS</h2></p>
 					<p><h3>RAGLAN</h3></p>
-					<p>Sat 4 December and Sun 5 December<br>
+					<p><h3>Old School Arts Centre, Stewart St</h3></p>
+					<p>- Sat 4 December - 3-5pm<br>
+						- Sun 5 December - 8-10am<br>
 						$50 for the weekend, $30 for Saturday only</p>
 					<p><h3>PRANA NEW YEARS FESTIVAL</h3></p>
-					<p>- Oputere Beach, Coromandel</p>
+					<p><h3>Oputere Beach, Coromandel</h3></p>
 					<p>Shadow Yoga demonstration and taught class</p>
 				</div>
 			</div>
