--- a/classes.html
+++ b/classes.html
@@ -49,7 +49,7 @@
 						- Thursday 11 November til Thursday 16 December<br>
 						&nbsp;&nbsp;6 week course (6.45 - 8pm)<br>
 						- Saturday morning 9 - 10.30am drop in class</p>
-					<p><h3>Ngunguru</h3></p>
+					<p><h3>NGUNGURU</h3></p>
 					<p><h3>Ngunguru Memorial Hall</h3></p>
 					<p>- Mondays - 5.30-6.45pm<br>
 						- Wednesdays - 10-11.15am</p>
