--- a/test/contact.html
+++ b/test/contact.html
@@ -42,11 +42,12 @@
 					<p><img alt="twist" src="./images/DSCF2648gd.JPG">
 						<img src="./images/DSCF2684.JPG" alt="uttanasana">
 					</p>
-				<p><a href="http://www.facebook.com/pages/Yoga-with-jaymin/144351492257386" target="_TOP" title="Yoga with jaymin"><img src="http://badge.facebook.com/badge/144351492257386.2492.1172043975.png" width="114" height="84" style="border: 0px;margin-left:0px;" /></a><br>
-					email : <a href="mailto:hello@yogawithjaymin.co.nz">hello@yogawithjaymin.co.nz</a><br>
+				<p>email : <a href="mailto:hello@yogawithjaymin.co.nz">hello@yogawithjaymin.co.nz</a><br>
 					mobile : (0064) 027 292 0193<br>
-					batcave : (0064) 9 846 9879
-					</p>
+					batcave : (0064) 9 846 9879</p>
+					<p><a href="http://www.facebook.com/pages/Yoga-with-jaymin/144351492257386" target="_TOP" title="Yoga with jaymin"><img src="http://badge.facebook.com/badge/144351492257386.2492.1172043975.png" width="114" height="84" style="border: 0px;margin-left:0px;" /></a><br>
+					The Yoga WIth Jaymin facebook page has the latest information on classes and workshops, as well as occasional links to articles and sites of interest to Shadow Yogis.
+							</p>
 					<p>links to further information:</p>
 					<p><a target="_blank" href="http://www.shadowyoga.com">Shadow Yoga</a> : Shandor Remete, the founder of Shadow Yoga.</p>
 					<p><a target="_blank" href="http://www.yogainthecity.co.uk">Yoga in the City</a> : Shadow Yoga classes and workshops in London with Jana Appleyard.</p>
