small text changes

--- a/test/contact.html
+++ b/test/contact.html
@@ -50,7 +50,7 @@
 							</p>
 					<p>links to further information:</p>
 					<p><a target="_blank" href="http://www.shadowyoga.com">Shadow Yoga</a> : Shandor Remete, the founder of Shadow Yoga.</p>
-					<p><a target="_blank" href="http://www.yogainthecity.co.uk">Yoga in the City</a> : Shadow Yoga classes and workshops in London with Jana Appleyard.</p>
+					<p><a target="_blank" href="http://www.yogainthecity.co.uk">Yoga in the City</a> : Shadow Yoga classes and workshops in London.</p>
 					<p><a target="_blank" href="http://www.theinnerspace.co.nz">The Inner Space</a> : various yoga classes and workshops in Grey Lynn, NZ.</p>
 					
 					<p>website designed by <a target="_blank" href="http://www.bvwdesign.com">BVW Design</a></p>
