new class added

--- a/classes.html
+++ b/classes.html
@@ -54,10 +54,8 @@
 					<p>- Mondays - 5.30-6.45pm<br>
 						- Wednesdays - 10-11.15am</p>
 					<p><h3>WHANGAREI</h3></p>
-					<p><h3>Yoga Circle, 4 John Street, Whangarei</h3></p>
-					<p>- Tuesday 2 November - Shadow Yoga Demonstration<br>
-						- Tuesday 9 November - Tuesday 14 December<br>
-						&nbsp;&nbsp;6 week course</p>					
+					<p><h3>World of Fitness, 125, Bank St, Whangarei</h3></p>
+					<p>- Tuesdays - 5.30-6.45pm</p>					
 					<p><h2>SHADOW YOGA WORKSHOPS</h2></p>
 					<p><h3>RAGLAN</h3></p>
 					<p><h3>Old School Arts Centre, Stewart St</h3></p>
