new class added

--- a/classes.html
+++ b/classes.html
@@ -54,7 +54,7 @@
 					<p>- Mondays - 5.30-6.45pm<br>
 						- Wednesdays - 10-11.15am</p>
 					<p><h3>WHANGAREI</h3></p>
-					<p><h3>World of Fitness, 125, Bank St, Whangarei</h3></p>
+					<p><h3>World of Fitness, 125 Bank St, Whangarei</h3></p>
 					<p>- Tuesdays - 5.30-6.45pm</p>					
 					<p><h2>SHADOW YOGA WORKSHOPS</h2></p>
 					<p><h3>RAGLAN</h3></p>
