--- a/contact.html
+++ b/contact.html
@@ -42,16 +42,16 @@
 					<p><img alt="twist" src="./images/DSCF2648gd.JPG">
 						<img src="./images/DSCF2684.JPG" alt="uttanasana">
 					</p>
-				<p>contact jaymin at<br>
-					hello@yogawithjaymin.co.nz<br>
-					or (0064) 027 292 0193<br>
-					or (0064) 9 846 9879</p>
-					<p>or see the following links for more info:</p>
-					<p>
-					<a target="_blank" href="http://www.shadowyoga.com">Shadow Yoga</a><br>
-					<a target="_blank" href="http://www.yogainthecity.co.uk">Yoga in the City</a><br>
-					<a target="_blank" href="http://www.theinnerspace.co.nz">The Inner Space</a></p>
-					</p>
+				<p>email : <a href="mailto:hello@yogawithjaymin.co.nz">hello@yogawithjaymin.co.nz</a><br>
+					mobile : (0064) 027 292 0193</p>
+					<p><a href="http://www.facebook.com/pages/Yoga-with-jaymin/144351492257386" target="_TOP" title="Yoga with jaymin"><img src="http://badge.facebook.com/badge/144351492257386.2492.1172043975.png" width="114" height="84" style="border: 0px;margin-left:0px;" /></a><br>
+					The Yoga With Jaymin facebook page has the latest information on classes and workshops, as well as occasional links to articles and sites of interest to Shadow Yogis.
+							</p>
+					<p>links to further information:</p>
+					<p><a target="_blank" href="http://www.shadowyoga.com">Shadow Yoga</a> : Shandor Remete, the founder of Shadow Yoga.</p>
+					<p><a target="_blank" href="http://www.yogainthecity.co.uk">Yoga in the City</a> : Shadow Yoga classes and workshops in London.</p>
+					<p><a target="_blank" href="http://www.theinnerspace.co.nz">The Inner Space</a> : various yoga classes and workshops in Grey Lynn, NZ.</p>
+					
 					<p>website designed by <a target="_blank" href="http://www.bvwdesign.com">BVW Design</a></p>
 				</div>
 			</div>
