--- a/test/contact.html
+++ b/test/contact.html
@@ -43,10 +43,9 @@
 						<img src="./images/DSCF2684.JPG" alt="uttanasana">
 					</p>
 				<p>email : <a href="mailto:hello@yogawithjaymin.co.nz">hello@yogawithjaymin.co.nz</a><br>
-					mobile : (0064) 027 292 0193<br>
-					batcave : (0064) 9 846 9879</p>
+					mobile : (0064) 027 292 0193</p>
 					<p><a href="http://www.facebook.com/pages/Yoga-with-jaymin/144351492257386" target="_TOP" title="Yoga with jaymin"><img src="http://badge.facebook.com/badge/144351492257386.2492.1172043975.png" width="114" height="84" style="border: 0px;margin-left:0px;" /></a><br>
-					The Yoga WIth Jaymin facebook page has the latest information on classes and workshops, as well as occasional links to articles and sites of interest to Shadow Yogis.
+					The Yoga With Jaymin facebook page has the latest information on classes and workshops, as well as occasional links to articles and sites of interest to Shadow Yogis.
 							</p>
 					<p>links to further information:</p>
 					<p><a target="_blank" href="http://www.shadowyoga.com">Shadow Yoga</a> : Shandor Remete, the founder of Shadow Yoga.</p>
