--- a/classes.html
+++ b/classes.html
@@ -50,12 +50,12 @@
 						&nbsp;&nbsp;6 week course (6.45 - 8pm)<br>
 						- Saturday morning 9 - 10.30am drop in class</p>
 					<p><h3>NGUNGURU</h3></p>
-					<p><h3>Ngunguru Memorial Hall</h3></p>
+					<p><h3>Cottage Studio, 193 Waiotoi Road</h3></p>
 					<p>- Mondays - 5.30-6.45pm<br>
 						- Wednesdays - 10-11.15am</p>
 					<p><h3>WHANGAREI</h3></p>
-					<p><h3>World of Fitness, 125 Bank St, Whangarei</h3></p>
-					<p>- Tuesdays - 5.30-6.45pm</p>					
+					<p><h3>Anytime Fitness, 93-95 Walton St, Whangarei</h3></p>
+					<p>- Tuesdays - 5.30-6.45pm  <em><strong>(classes starting from mid-January 2011)</strong></em></p>					
 					<p><h2>SHADOW YOGA WORKSHOPS</h2></p>
 					<p><h3>RAGLAN</h3></p>
 					<p><h3>Old School Arts Centre, Stewart St</h3></p>
