new classes in Mount Albert

--- a/classes.html
+++ b/classes.html
@@ -54,14 +54,18 @@
 					<p>- Mondays - 5.30-6.45pm<br>
 						- Wednesdays - 10-11.15am</p>
 					<p><h3>WHANGAREI</h3></p>
-					<p><h3>Anytime Fitness, 93-95 Walton St, Whangarei</h3></p>
-					<p>- Tuesdays - 5.30-6.45pm  <em><strong>(classes starting from mid-January 2011)</strong></em></p>					
+					<p><h3>Anytime Fitness, 93-95 Walton St, Whangarei - from mid-January 2011</h3></p>
+					<p>- Tuesdays - 5.30-6.45pm</p>
+                    <p><h3>MOUNT ALBERT</h3></p>
+                    <p><h3>Mt Albert Community and Recreation Centre, 773 New North Rd (Mezzanine room) - from January 20th 2011</h3></p>
+                    <p>- Thursdays - 7.15 - 8.30pm</p>
+                    <p>($15 drop-in or $135 for 10 classes.  Students/unwaged $10 and concessions available.)</p>
+                    <p><h3>Mt Albert Senior Citizens Hall (corner Wairere Avenue and New North Rd) - from January 15th 2011</h3></p>
+                    <p>- Saturdays - 9.00 - 10.30am <em><strong>(Please note there is no age preference for this class!)</strong></em></p>
+                    <p>($15 drop-in or $135 for 10 classes.  Students/unwaged $10 and concessions available.)</p>
+                    <p><h3>Mt Albert Unitec Sports Centre, Carrington Rd - from January 21st 2011</h3></p>
+                    <p>- Fridays - 6.30 - 7.45am ($12 drop-in, $10 community students, $8 Unitec students)</p>
 					<p><h2>SHADOW YOGA WORKSHOPS</h2></p>
-					<p><h3>RAGLAN</h3></p>
-					<p><h3>Old School Arts Centre, Stewart St</h3></p>
-					<p>- Sat 4 December - 3-5pm<br>
-						- Sun 5 December - 8-10am<br>
-						$50 for the weekend, $30 for Saturday only</p>
 					<p><h3>PRANA NEW YEARS FESTIVAL</h3></p>
 					<p><h3>Oputere Beach, Coromandel</h3></p>
 					<p>Shadow Yoga demonstration and taught class</p>
