--- a/classes.html
+++ b/classes.html
@@ -69,6 +69,11 @@
 					<p><h3>PRANA NEW YEARS FESTIVAL</h3></p>
 					<p><h3>Oputere Beach, Coromandel</h3></p>
 					<p>Shadow Yoga demonstration and taught class</p>
+                    <p><h3>AUCKLAND</h3></p>
+                    <p><h3>Soul Centre of the Body and Mind, 18 Huia Rd, Titirangi</h3></p>
+                    <p>- February 12th & 13th, 2011</p>
+                    <p>- Sat 2.00 - 4.00pm, Sun 11.00 - 1.00pm</p>
+                    <p>($70 for the weekend)</p>
 				</div>
 			</div>
 		</div>
