new classes and link to We'ar

--- a/classes.html
+++ b/classes.html
@@ -44,20 +44,7 @@
 				<p><h2>SHADOW YOGA CLASSES</h2></p>
 				<p>NB	private tuition and corporate classes available, pregnancy classes taught upon request</p>  
 					<p><h3>AUCKLAND</h3></p>
-					<p><h3>The Inner Space, 2 Selbourne Street, Greylynn</h3></p>
-					<p>- Thursday 4 November 7pm - Shadow Yoga Demonstration<br>
-						- Thursday 11 November til Thursday 16 December<br>
-						&nbsp;&nbsp;6 week course (6.45 - 8pm)<br>
-						- Saturday morning 9 - 10.30am drop in class</p>
-					<p><h3>NGUNGURU</h3></p>
-					<p><h3>Cottage Studio, 193 Waiotoi Road</h3></p>
-					<p>- Mondays - 5.30-6.45pm<br>
-						- Wednesdays - 10-11.15am</p>
-					<p><h3>WHANGAREI</h3></p>
-					<p><h3>Anytime Fitness, 93-95 Walton St, Whangarei - from mid-January 2011</h3></p>
-					<p>- Tuesdays - 5.30-6.45pm</p>
-                    <p><h3>MOUNT ALBERT</h3></p>
-                    <p><h3>Mt Albert Community and Recreation Centre, 773 New North Rd (Mezzanine room) - from January 20th 2011</h3></p>
+					<p><h3>Mt Albert Community and Recreation Centre, 773 New North Rd (Mezzanine room) - from January 20th 2011</h3></p>
                     <p>- Thursdays - 7.15 - 8.30pm</p>
                     <p>($15 drop-in or $135 for 10 classes.  Students/unwaged $10 and concessions available.)</p>
                     <p><h3>Mt Albert Senior Citizens Hall (corner Wairere Avenue and New North Rd) - from January 15th 2011</h3></p>
@@ -65,11 +52,17 @@
                     <p>($15 drop-in or $135 for 10 classes.  Students/unwaged $10 and concessions available.)</p>
                     <p><h3>Mt Albert Unitec Sports Centre, Carrington Rd - from January 21st 2011</h3></p>
                     <p>- Fridays - 6.30 - 7.45am ($12 drop-in, $10 community students, $8 Unitec students)</p>
+					<p><h3>NGUNGURU</h3></p>
+					<p><h3>Cottage Studio, 193 Waiotoi Road</h3></p>
+					<p>- Mondays <br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;- 5.30 - 6.45pm<br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;- 7.30 - 8.45pm (men only!)<br><br>
+						- Wednesdays - 10-11.15am</p>
+					<p><h3>WHANGAREI</h3></p>
+					<p><h3>Anytime Fitness, 93-95 Walton St, Whangarei - from mid-January 2011</h3></p>
+					<p>- Tuesdays - 5.30-6.45pm</p>
 					<p><h2>SHADOW YOGA WORKSHOPS</h2></p>
-					<p><h3>PRANA NEW YEARS FESTIVAL</h3></p>
-					<p><h3>Oputere Beach, Coromandel</h3></p>
-					<p>Shadow Yoga demonstration and taught class</p>
-                    <p><h3>AUCKLAND</h3></p>
+					<p><h3>AUCKLAND</h3></p>
                     <p><h3>Soul Centre of the Body and Mind, 18 Huia Rd, Titirangi</h3></p>
                     <p>- February 12th & 13th, 2011</p>
                     <p>- Sat 2.00 - 4.00pm, Sun 11.00 - 1.00pm</p>
