--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,8 @@
 					<p><a target="_blank" href="http://www.shadowyoga.com">Shadow Yoga</a> : Shandor Remete, the founder of Shadow Yoga.</p>
 					<p><a target="_blank" href="http://www.yogainthecity.co.uk">Yoga in the City</a> : Shadow Yoga classes and workshops in London.</p>
 					<p><a target="_blank" href="http://www.theinnerspace.co.nz">The Inner Space</a> : various yoga classes and workshops in Grey Lynn, NZ.</p>
-					
+                    <p><a target="_blank" href="http://www.wearyogaclothing.com/">We'ar clothing</a> : inspiring eco and ethical yoga clothing with a soul and a conscience.</p>
+
 					<p>website designed by <a target="_blank" href="http://www.bvwdesign.com">BVW Design</a></p>
 				</div>
 			</div>
