--- a/classes.html
+++ b/classes.html
@@ -44,22 +44,22 @@
 				<p><h2>SHADOW YOGA CLASSES</h2></p>
 				<p>NB	private tuition and corporate classes available, pregnancy classes taught upon request</p>  
 					<p><h3>AUCKLAND</h3></p>
-					<p><h3>Mt Albert Community and Recreation Centre, 773 New North Rd (Mezzanine room) - from January 20th 2011</h3></p>
+					<p><h3>Mt Albert Community and Recreation Centre, 773 New North Rd (Mezzanine room)</h3></p>
                     <p>- Thursdays - 7.15 - 8.30pm</p>
                     <p>($15 drop-in or $135 for 10 classes.  Students/unwaged $10 and concessions available.)</p>
-                    <p><h3>Mt Albert Senior Citizens Hall (corner Wairere Avenue and New North Rd) - from January 15th 2011</h3></p>
+                    <p><h3>Mt Albert Senior Citizens Hall (corner Wairere Avenue and New North Rd)</h3></p>
                     <p>- Saturdays - 9.00 - 10.30am <em><strong>(Please note there is no age preference for this class!)</strong></em></p>
                     <p>($15 drop-in or $135 for 10 classes.  Students/unwaged $10 and concessions available.)</p>
-                    <p><h3>Mt Albert Unitec Sports Centre, Carrington Rd - from January 21st 2011</h3></p>
+                    <p><h3>Mt Albert Unitec Sports Centre, Carrington Rd</h3></p>
                     <p>- Fridays - 6.30 - 7.45am ($12 drop-in, $10 community students, $8 Unitec students)</p>
-					<p><h3>NGUNGURU</h3></p>
-					<p><h3>Cottage Studio, 193 Waiotoi Road</h3></p>
+					<p><h3>MATAPOURI</h3></p>
+					<p><h3>Mi Casa Gallery , 529 Matapouri rd, Tutukaka Coast</h3></p>
 					<p>- Mondays <br>
                         &nbsp;&nbsp;&nbsp;&nbsp;- 5.30 - 6.45pm<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;- 7.30 - 8.45pm (men only!)<br><br>
-						- Wednesdays - 10-11.15am</p>
+						- Wednesdays - 7.30 - 8.45pm</p>
 					<p><h3>WHANGAREI</h3></p>
-					<p><h3>Anytime Fitness, 93-95 Walton St, Whangarei - from mid-January 2011</h3></p>
+					<p><h3>Anytime Fitness, 93-95 Walton St, Whangarei</h3></p>
 					<p>- Tuesdays - 5.30-6.45pm</p>
 					<p><h2>SHADOW YOGA WORKSHOPS</h2></p>
 					<p><h3>AUCKLAND</h3></p>
