change ngunguru to matapouri

--- a/classes.html
+++ b/classes.html
@@ -53,7 +53,7 @@
                     <p><h3>Mt Albert Unitec Sports Centre, Carrington Rd</h3></p>
                     <p>- Fridays - 6.30 - 7.45am ($12 drop-in, $10 community students, $8 Unitec students)</p>
 					<p><h3>MATAPOURI</h3></p>
-					<p><h3>Mi Casa Gallery, 529 Matapouri rd, Tutukaka Coast</h3></p>
+					<p><h3>Mi Casa Gallery, 529 Matapouri Rd, Tutukaka Coast</h3></p>
 					<p>- Mondays <br>
                         &nbsp;&nbsp;&nbsp;&nbsp;- 5.30 - 6.45pm<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;- 7.30 - 8.45pm (men only!)<br><br>
