changes for moving to Northland

--- a/about.html
+++ b/about.html
@@ -1,52 +1,63 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-	<head>
-		<title>Shadow Yoga with Jaymin - About Jaymin</title>
-		<LINK rel="stylesheet" href="ywj.css" type="text/css">
-			<script type="text/javascript">
+<head>
+    <title>Shadow Yoga with Jaymin - About Jaymin</title>
+    <LINK rel="stylesheet" href="ywj.css" type="text/css">
+    <script type="text/javascript">
 
-			  var _gaq = _gaq || [];
-			  _gaq.push(['_setAccount', 'UA-12135640-3']);
-			  _gaq.push(['_trackPageview']);
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-12135640-3']);
+        _gaq.push(['_trackPageview']);
 
-			  (function() {
-			    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			  })();
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
 
-			</script>		
-	</head>
-	<body>
-		<div id="background">
-			<img src="./images/YWJ_LOGO.jpg">
-		</div>
-		<div id="content">
-				<div class="menu">
-					<ul>
-						<li><a href="./index.html">HOME</a>
-						</li>
-						<li><a href="./shadow.html">SHADOW YOGA</a>
-						</li>
-						<li><a href="./classes.html">CLASSES</a>
-						</li>
-						<li><a href="./treatments.html">TREATMENTS</a>
-						</li>
-						<li><a class="selected" href="./about.html">ABOUT JAYMIN</a>
-						</li>
-						<li><a href="./contact.html">CONTACT</a>
-						</li>
-					</ul>
-				</div>
-				<div class="main">
-					<p><img alt="karkottika" src="./images/DSCF2614gd.JPG"> <img src="./images/DSCF2669.jpg" alt="sarpa">
-					</p>
-				<p>Jaymin was introduced, while living in London, to Shadow Yoga in 2002 after a few years of casually exploring other yoga styles. Different from anything she had encountered in other classes she immediately recognised the intelligence in the shadow system's approach to working with the body, and consequently the mind.</p>
-				<p>A native New Zealander, Jaymin stayed in London so she could continue to study Shadow Yoga with a couple of years at Islington Yoga on their teacher training programme and with her mentor Jana Appleyard at Yoga in the City. Jaymin has studied with Jana since 2004 and continued her teacher training in the form of a 3 year apprenticeship. Jaymin still studies with Jana, as well as teaching classes and workshops at Yoga in the City when she is in London.</p>
-				<p>Jaymin is continuing her Shadow Yoga development with a 3 year teacher training programme that started in 2009 with Zhander Remete (founder of Shadow Yoga) and Emma Balnaves.</p>
-				</div>
-			</div>
-		</div>
-		</div>
-	</body>
+    </script>
+</head>
+<body>
+<div id="background">
+    <img src="./images/YWJ_LOGO.jpg">
+</div>
+<div id="content">
+    <div class="menu">
+        <ul>
+            <li><a href="./index.html">HOME</a>
+            </li>
+            <li><a href="./shadow.html">SHADOW YOGA</a>
+            </li>
+            <li><a href="./classes.html">CLASSES</a>
+            </li>
+            <li><a href="./treatments.html">TREATMENTS</a>
+            </li>
+            <li><a class="selected" href="./about.html">ABOUT JAYMIN</a>
+            </li>
+            <li><a href="./contact.html">CONTACT</a>
+            </li>
+        </ul>
+    </div>
+    <div class="main">
+        <p><img alt="karkottika" src="./images/DSCF2614gd.JPG"> <img src="./images/DSCF2669.jpg" alt="sarpa">
+        </p>
+
+        <p>Jaymin was introduced, while living in London, to Shadow Yoga in 2002 after a few years of casually exploring
+            other yoga styles. Different from anything she had encountered in other classes she immediately recognised
+            the intelligence in the shadow system's approach to working with the body, and consequently the mind.</p>
+
+        <p>A native New Zealander, Jaymin stayed in London so she could continue to study Shadow Yoga with a couple of
+            years at Islington Yoga on their teacher training programme and with her mentor Jana Appleyard at Yoga in
+            the City. Jaymin has studied with Jana since 2004 and continued her teacher training in the form of a 3 year
+            apprenticeship. Jaymin still studies with Jana, as well as teaching classes and workshops at Yoga in the
+            City when she is in London.</p>
+
+        <p>Jaymin is continuing her Shadow Yoga development with a 3 year teacher training programme that started in
+            2009 with Zhander Remete (founder of Shadow Yoga) and Emma Balnaves.</p>
+    </div>
+</div>
+</body>
 </html>
