--- a/contact.html
+++ b/contact.html
@@ -51,11 +51,9 @@
 					<p><a target="_blank" href="http://www.shadowyoga.com">Shadow Yoga</a> : Shandor Remete, the founder of Shadow Yoga.</p>
 					<p><a target="_blank" href="http://www.yogainthecity.co.uk">Yoga in the City</a> : Shadow Yoga classes and workshops in London.</p>
 					<p><a target="_blank" href="http://www.wearyogaclothing.com/">We'ar clothing</a> : inspiring eco and ethical yoga clothing with a soul and a conscience.</p>
-
+                    <p><a target="_blank" href="http://www.micasagallery.co.nz">Micasa Gallery</a> : venue for Matapouri classes.</p>
 					<p>website designed by <a target="_blank" href="http://www.bvwdesign.com">BVW Design</a></p>
 				</div>
 			</div>
-		</div>
-		</div>
 	</body>
 </html>
