--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 				</p>
 				<p>Jaymin Gansell teaches Hatha Yoga, her teaching being grounded in the Shadow Yoga system.
 				</p>
-				<p>Shadow Yoga classes and workshops are currently run in Auckland City and surrounding areas with workshops in Northland and the Waikato.
+				<p>Jaymin teaches Shadow Yoga classes and workshops based in Northland with workshops in Auckland also
+                    being run on a regular basis.
 				</p>
 				<p>Shadow Yoga workshops are also offered throughout Aotearoa where expressions of interest are shown, please get in touch.
 				</p>
