--- a/classes.html
+++ b/classes.html
@@ -1,72 +1,87 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-	<head>
-		<title>Shadow Yoga with Jaymin - Classes</title>
-		<LINK rel="stylesheet" href="ywj.css" type="text/css">
-			<script type="text/javascript">
+<head>
+    <title>Shadow Yoga with Jaymin - Classes</title>
+    <LINK rel="stylesheet" href="ywj.css" type="text/css">
+    <script type="text/javascript">
 
-			  var _gaq = _gaq || [];
-			  _gaq.push(['_setAccount', 'UA-12135640-3']);
-			  _gaq.push(['_trackPageview']);
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-12135640-3']);
+        _gaq.push(['_trackPageview']);
 
-			  (function() {
-			    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			  })();
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
 
-			</script>		
-	</head>
-	<body>
-		<div id="background">
-			<img src="./images/YWJ_LOGO.jpg">
-		</div>
-		<div id="content">
-				<div class="menu">
-					<ul>
-						<li><a href="./index.html">HOME</a>
-						</li>
-						<li><a href="./shadow.html">SHADOW YOGA</a>
-						</li>
-						<li><a class="selected" href="./classes.html">CLASSES</a>
-						</li>
-						<li><a href="./treatments.html">TREATMENTS</a>
-						</li>
-						<li><a href="./about.html">ABOUT JAYMIN</a>
-						</li>
-						<li><a href="./contact.html">CONTACT</a>
-						</li>
-					</ul>
-				</div>
-				<div class="main">
-				<p><img alt="sarpa" src="./images/DSCF2612gd.JPG"> <img src="./images/DSCF2615.JPG" alt="ardhabujang">
-				</p>
-				<p><h2>SHADOW YOGA CLASSES</h2></p>
-				<p>NB	private tuition and corporate classes available, pregnancy classes taught upon request</p>  
-					<p><h3>AUCKLAND</h3></p>
-					<p><h3>Mt Albert Community and Recreation Centre, 773 New North Rd (Mezzanine room)</h3></p>
-                    <p>- Thursdays - 7.15 - 8.30pm</p>
-                    <p>($15 drop-in or $135 for 10 classes.  Students/unwaged $10 and concessions available.)</p>
-                    <p><h3>Mt Albert Senior Citizens Hall (corner Wairere Avenue and New North Rd)</h3></p>
-                    <p>- Saturdays - 9.00 - 10.30am <em><strong>(Please note there is no age preference for this class!)</strong></em></p>
-                    <p>($15 drop-in or $135 for 10 classes.  Students/unwaged $10 and concessions available.)</p>
-                    <p><h3>Mt Albert Unitec Sports Centre, Carrington Rd</h3></p>
-                    <p>- Fridays - 6.30 - 7.45am ($12 drop-in, $10 community students, $8 Unitec students)</p>
-					<p><h3>MATAPOURI</h3></p>
-					<p><h3>Mi Casa Gallery, 529 Matapouri Rd, Tutukaka Coast</h3></p>
-					<p>- Mondays <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;- 5.30 - 6.45pm<br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;- 7.30 - 8.45pm (men only!)<br><br>
-						- Wednesdays - 7.30 - 8.45pm</p>
-					<p><h2>SHADOW YOGA WORKSHOPS</h2></p>
-					<p><h3>AUCKLAND</h3></p>
-                    <p><h3>Soul Centre of the Body and Mind, 18 Huia Rd, Titirangi</h3></p>
-                    <p>- February 12th & 13th, 2011</p>
-                    <p>- Sat 2.00 - 4.00pm, Sun 11.00 - 1.00pm</p>
-                    <p>($70 for the weekend)</p>
-				</div>
-			</div>
-		</div>
-		</div>
-	</body>
+    </script>
+</head>
+<body>
+<div id="background">
+    <img src="./images/YWJ_LOGO.jpg">
+</div>
+<div id="content">
+    <div class="menu">
+        <ul>
+            <li><a href="./index.html">HOME</a>
+            </li>
+            <li><a href="./shadow.html">SHADOW YOGA</a>
+            </li>
+            <li><a class="selected" href="./classes.html">CLASSES</a>
+            </li>
+            <li><a href="./treatments.html">TREATMENTS</a>
+            </li>
+            <li><a href="./about.html">ABOUT JAYMIN</a>
+            </li>
+            <li><a href="./contact.html">CONTACT</a>
+            </li>
+        </ul>
+    </div>
+    <div class="main">
+        <p><img alt="sarpa" src="./images/DSCF2612gd.JPG"> <img src="./images/DSCF2615.JPG" alt="ardhabujang">
+        </p>
+
+        <p>
+
+        <h2>SHADOW YOGA CLASSES</h2></p>
+        <p>NB private tuition and corporate classes available, pregnancy classes taught upon request</p>
+
+        <p>
+
+        <h3>MATAPOURI</h3></p>
+        <p>
+
+        <h3>Mi Casa Gallery, 529 Matapouri Rd, Tutukaka Coast (all classes $10)</h3></p>
+        <p>- Mondays <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;- 5.30 - 6.45pm<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;- 7.30 - 8.45pm (men only!)<br><br>
+            - Wednesdays - 7.30 - 8.45pm<br><br>
+            - Thursdays - 7.30 - 8.45pm<br><br>
+            - Saturdays - 9.00 - 10.15am
+        <p>
+
+        <h2>SHADOW YOGA WORKSHOPS</h2></p>
+
+        <p>
+
+        <h3>AUCKLAND</h3></p>
+        <p>
+
+        <h3>Soul Centre of the Body and Mind, 18 Huia Rd, Titirangi - $50</h3></p>
+        <p>- March 19th</p>
+
+        <p>
+
+        <h3>The Breathing Space, Waiheke Island - $60</h3></p>
+        <p>- April 9th, 11.30 - 12.30 & 1.30 - 2.30</p>
+
+        <h3>Soul Centre of the Body and Mind, 18 Huia Rd, Titirangi - $50</h3></p>
+        <p>- April 10th</p>
+    </div>
+</div>
+</body>
 </html>
