--- a/classes.html
+++ b/classes.html
@@ -58,7 +58,7 @@
         <h3>Mi Casa Gallery, 529 Matapouri Rd, Tutukaka Coast (all classes $10)</h3></p>
         <p>- Mondays <br>
             &nbsp;&nbsp;&nbsp;&nbsp;- 5.30 - 6.45pm<br>
-            &nbsp;&nbsp;&nbsp;&nbsp;- 7.30 - 8.45pm (men only!)<br><br>
+            &nbsp;&nbsp;&nbsp;&nbsp;- 7.30 - 8.45pm<br><br>
             - Wednesdays - 7.30 - 8.45pm<br><br>
             - Thursdays - 7.30 - 8.45pm<br><br>
             - Saturdays - 9.00 - 10.15am
