changed some of the pics around, new one with dog on about page

--- a/about.html
+++ b/about.html
@@ -42,7 +42,8 @@
         </ul>
     </div>
     <div class="main">
-        <p><img alt="karkottika" src="./images/DSCF2614gd.JPG"> <img src="./images/DSCF2669.jpg" alt="sarpa">
+        <p><img src="./images/DSCF2716.jpg" alt="sarpa">
+            <img src="./images/DSCF2669.jpg" alt="sarpa">
         </p>
 
         <p>Jaymin was introduced, while living in London, to Shadow Yoga in 2002 after a few years of casually exploring
