--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
 					</ul>
 				</div>
 				<div class="main">
-					<p><img alt="twist" src="./images/DSCF2648gd.JPG">
-						<img src="./images/DSCF2684.JPG" alt="uttanasana">
+					<p><img alt="vahni" src="./images/DSCF2602_scaled.JPG">
+                        <img src="./images/DSCF2684.JPG" alt="uttanasana">
 					</p>
 				<p>email : <a href="mailto:hello@yogawithjaymin.co.nz">hello@yogawithjaymin.co.nz</a><br>
 					mobile : (0064) 027 292 0193</p>
