--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 					</ul>
 				</div>
 				<div class="main">
-				<p><img alt="vahni" src="./images/DSCF2602_scaled.JPG"> <img src="./images/DSCF2628gd_scaled.JPG" alt="sarpa">
+				<p><img alt="twist" src="./images/DSCF2648gd.JPG">
+						 <img src="./images/DSCF2628gd_scaled.JPG" alt="sarpa">
 				</p>
 				<p>Welcome.
 				</p>
